== Changelog ==

= 1.3.0 =
* Fixed: form element errors are now displayed correctly on horizontal forms and hidden on inline forms
* Fixed: typo 'dismissable' in alert setting / class is now 'dismissible'

= 1.2.4 =
* Tweaked: added textdomain for translate.wordpress.org
* Fixed: defaults are now working correctly on all field types
* Fixed: the label for attribute is no longer printed if no ID has been provided

= 1.2.3 =
* Enhanced: Arguments for every field are now filtered to allow detailed adjustments

= 1.2.2 =
* Fixed: CSS is now specific to the contact form to prevent conflicts

= 1.2.1 =
* Added: the captchar shortcode now supports an 'include_captchac' option to display the captcha image inline with the input field
* Added: the textarea shortcode and all other text inputs now support an 'include_count' option to display their character count inline with them
* Enhanced: the default grid column count of Bootstrap can now be overridden using the form property 'grid_columns'
* Enhanced: the textarea shortcode now supports 'input_before' and 'input_after' (content is displayed above / below the textarea)
* Enhanced: the submit button size can now be adjusted separately from the rest of the form's size
* Tweaked: captcha images now have their image size adjusted to the 'size' form property by default
* Tweaked: `---` typed in the 'input_before' or 'input_after' option will render as a space in the frontend
* Fixed: minlength and maxlength attributes are now honored by all text inputs and textareas

= 1.2.0 =
* Added: new CF7 count shortcode is now supported
* Enhanced: form properties can now be modified without any code (i.e. without a filter); the properties can be defined in the new "Additional Settings" tab of Contact Form 7
* Enhanced: textual inputs now support Bootstrap's input group feature
* Enhanced: checkbox and radio types can now show an actual label; it is only used as the checkbox label if no option is provided