@@ -2,6 +2,7 @@
 
 = 1.3.0 =
 * Fixed: form element errors are now displayed correctly on horizontal forms and hidden on inline forms
+* Fixed: plugin constant definitions now happen on 'plugins_loaded' hook
 * Fixed: typo 'dismissable' in alert setting / class is now 'dismissible'
 
 = 1.2.4 =
